tests/ui/aggregate_types_postgres/fail/group_concat_requires_sqlite.stderr
error[E0277]: this aggregate is not available for this dialect
 --> tests/ui/aggregate_types_postgres/fail/group_concat_requires_sqlite.rs:5:13
  |
5 |     let _ = group_concat(raw_non_null::<PostgresValue, drizzle::postgres::types::Text>("'x'"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use a dialect-specific alternative
  |
  = help: the trait `SQLiteAggregateSupport` is not implemented for `PostgresDialect`
help: the trait `SQLiteAggregateSupport` is implemented for `SQLiteDialect`
 --> core/src/expr/agg.rs
  |
  | impl SQLiteAggregateSupport for SQLiteDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `group_concat`
 --> core/src/expr/agg.rs
  |
  | pub fn group_concat<'a, V, E>(
  |        ------------ required by a bound in this function
...
  |     V::DialectMarker: SQLiteAggregateSupport,
  |                       ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `group_concat`
